objects/testCustom__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>testCustCheck1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>testCustCheck1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testCustCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>testCustCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testID__c</fullName>
        <label>testID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testName__c</fullName>
        <label>testName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>testCustomSetting</label>
</CustomObject>